# dev-factory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
devfactory/: __init__.py  cli.py  config.py  context.py  logging_setup.py  orchestrator.py  repo_context.py
devfactory/agents/: __init__.py  analyst.py  base.py  developer.py  qa.py  reviewer.py
devfactory/github/: __init__.py  client.py  git_ops.py  issues.py  poller.py  pr.py  review.py
devfactory/kb/: __init__.py  dashboard.py  database.py  scorer.py
devfactory/models/: __init__.py  client.py  registry.py  retry.py  router.py
devfactory/qa/: __init__.py  runner.py
docker/: Dockerfile.test
prompts/: analyst.md  developer.md  reviewer.md
tests/: test_context.py  test_dashboard.py  test_registry.py  test_repo_context.py  test_scorer.py
