[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devfactory"
version = "0.1.0"
description = "A local AI-powered software factory: sequential SDLC agent pipeline over GitHub Issues"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "DevFactory Contributors" }]
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "sdlc", "github", "automation", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "PyGithub>=2.3",
    "gitpython>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/your-org/devfactory"
Issues   = "https://github.com/your-org/devfactory/issues"

[project.scripts]
devfactory = "devfactory.cli:app"

[tool.setuptools.packages.find]
where   = ["."]
include = ["devfactory*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit (security)
    "C4",  # comprehension improvements
    "RET", # return statement improvements
]
ignore = [
    "S101",  # assert — fine in tests
    "S108",  # /tmp path in config default — overridable via DEVFACTORY_WORKSPACE env var
    "S110",  # try-except-pass for label removal — GitHub API is best-effort, already logged elsewhere
    "S311",  # random.choice for model selection — not cryptographic, by design
    "S608",  # SQL string construction — field names are whitelisted in update_task()
    "S603",  # subprocess.run — used intentionally in qa/runner.py and cli.py init
    "S607",  # partial executable path in subprocess — docker is expected on PATH
    "E741",  # ambiguous variable name `l` — used in label iteration (rename would reduce clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts allowed in tests

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
warn_return_any       = true
warn_unused_ignores   = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "strict"
